--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,13 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.24)
 project(imgui_example_glfw_vulkan C CXX)
 
 if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE Debug CACHE STRING "" FORCE)
+  set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
 endif()
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DVK_PROTOTYPES")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_PROTOTYPES")
 #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread") # testing
@@ -17,13 +19,23 @@ option(GLFW_BUILD_TESTS "Build the GLFW test programs" OFF)
 option(GLFW_BUILD_DOCS "Build the GLFW documentation" OFF)
 option(GLFW_INSTALL "Generate installation target" OFF)
 option(GLFW_DOCUMENT_INTERNALS "Include internals in documentation" OFF)
+option(GLEW_STATIC "static glew" ON)
 add_subdirectory(${GLFW_DIR} binary_dir EXCLUDE_FROM_ALL)
 include_directories(${GLFW_DIR}/include)
 
+# Freetype
+set(FREETYPE_DIRECTORY "libs/freetype")
+add_subdirectory(${FREETYPE_DIRECTORY})
+# include_directories(${FREETYPE_DIRECTORY}/include)
+
 # Dear ImGui
+include_directories(BEFORE Resources)
 set(IMGUI_DIR libs/imgui)
 set(IMPLOT_DIR libs/implot)
 include_directories(${IMGUI_DIR} ${IMGUI_DIR}/backends ${IMPLOT_DIR} ..)
+include_directories(${IMGUI_DIR}/misc/freetype)
+add_compile_definitions(IMGUI_ENABLE_FREETYPE)
+add_compile_definitions(IMGUI_USE_WCHAR32)
 
 # Libraries
 find_package(Vulkan REQUIRED)
@@ -38,8 +50,18 @@ include_directories(${GLFW_DIR}/deps)
 # For FontAwesome Icons
 include_directories(libs/IconFontCppHeaders)
 
+include_directories(libs/ImGuiNotify)
+
 #file(GLOB sources *.cpp)
 
-add_executable(example_glfw_vulkan main.cpp src/GUI.cpp ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp ${IMGUI_DIR}/backends/imgui_impl_vulkan.cpp ${IMGUI_DIR}/imgui.cpp ${IMGUI_DIR}/imgui_draw.cpp ${IMGUI_DIR}/imgui_demo.cpp ${IMGUI_DIR}/imgui_tables.cpp ${IMGUI_DIR}/imgui_widgets.cpp ${IMPLOT_DIR}/implot_demo.cpp ${IMPLOT_DIR}/implot_items.cpp ${IMPLOT_DIR}/implot.cpp)
-target_link_libraries(example_glfw_vulkan ${LIBRARIES})
-target_compile_definitions(example_glfw_vulkan PUBLIC -DImTextureID=ImU64)
+add_executable(${PROJECT_NAME} main.cpp src/GUI.cpp ${IMGUI_DIR}/misc/freetype/imgui_freetype.cpp ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp ${IMGUI_DIR}/backends/imgui_impl_vulkan.cpp ${IMGUI_DIR}/imgui.cpp ${IMGUI_DIR}/imgui_draw.cpp ${IMGUI_DIR}/imgui_demo.cpp ${IMGUI_DIR}/imgui_tables.cpp ${IMGUI_DIR}/imgui_widgets.cpp ${IMPLOT_DIR}/implot_demo.cpp ${IMPLOT_DIR}/implot_items.cpp ${IMPLOT_DIR}/implot.cpp)
+target_link_libraries(${PROJECT_NAME} ${LIBRARIES})
+target_link_libraries(${PROJECT_NAME} freetype)
+
+# target_link_libraries(${PROJECT_NAME} harfbuzz ${FREETYPE_LIBRARIES})
+target_include_directories(${PROJECT_NAME} PRIVATE ${FREETYPE_INCLUDE_DIRS})
+target_compile_definitions(${PROJECT_NAME} PUBLIC -DImTextureID=ImU64)
+
+# if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
+#   set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup /SUBSYSTEM:WINDOWS")
+# endif()
